[package]
name = "u2"
version = "0.1.13"
edition = "2024"
authors = ["Flavio Oliveira, et al (2017-2020) as `u2f`", "Jonathan A. McCormick, Jr. (2025-) as `u2`"]

description = "A Rust Authentication Library for U2F and FIDO2 on the web. A fork of the `u2f` crate."
license = "MIT OR Apache-2.0"
keywords = ["authentication", "encryption", "U2F", "2fa", "FIDO"]
categories = ["authentication"]
repository = "https://github.com/JonathanMcCormickJr/u2"
readme = "README.md"

[lib]
name = "u2"
path = "src/lib.rs"

[dependencies]
assertables = "9.8.2"
time = "0.3"
bytes = "0.4"
base64 = "0.11"
chrono = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
byteorder = "1.3"
openssl = "0.10"
